syntax = "proto3";

package org.itson.Alarmator;

// Servicio gRPC para manejar alarmas
service AlarmatorServidor {
  rpc RegistrarAlarma (AlarmaDTO) returns (Empty);
  rpc ActualizarAlarma (AlarmaDTO) returns (Empty);
  rpc EliminarAlarma (AlarmaDTO) returns (Empty);
  rpc ActualizarAlarmas (AlarmasList) returns (Empty);
}

// Mensaje que representa una alarma
message AlarmaDTO {
  string idAlarma = 1;
  repeated string idSensores = 3;
  string invernadero = 4;
  float valorMinimo = 5;
  float valorMaximo = 6;
  string magnitud = 2;
  string unidad = 7;
  string medioNotificacion = 8;
  bool activo = 9;
}

// Mensaje para la lista de alarmas
message AlarmasList {
  repeated AlarmaDTO alarmas = 1;
}

message Empty {} // Mensaje vacío, utilizado para no pasar parámetros
