syntax = "proto3";

// Creo que este es el paquete papá de los pollitos.
package org.itson.gestionSensores;

option java_multiple_files = true; // Indica que habrá una clase por mensaje y por servicio. En vez de una para todo.
option java_package = "com.itson.grpc"; // Paquete donde se generarán las clases.
option java_outer_classname = "GestionSensoresProto"; // Nombre de la clase externa por default.

// Servicio
service GestionSensoresServicio {
  rpc GetSensorByMac (SensorPeticion) returns (SensorRespuesta);
}

// Mensaje de solicitud
message SensorPeticion {
  string macAddress = 1;
}

// Mensaje de respuesta
message SensorRespuesta {
  string idSensor = 1;
  string macAddress = 2;
  string marca = 3;
  string modelo = 4;
  string idInvernadero = 5;
  string nombreInvernadero = 6;
  string sector = 7;
  string fila = 8;
}